26-11 code to live on render

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT=5001
-MONGO_URI=mongodb://127.0.0.1:27017/fusionmain
+# MONGO_URI=mongodb://127.0.0.1:27017/fusionmain
+MONGO_URI=mongodb+srv://kumarsaurabh2784_db_user:54123_Dsa_123@clustertest.damc9wv.mongodb.net/fusionmain
 JWT_SECRET=fusionmain_secret_key
 ADMIN_SECRET=my_admin_secret_key2
