--- a/.env
+++ b/.env
@@ -3,3 +3,8 @@ PORT=5001
 MONGO_URI=mongodb+srv://kumarsaurabh2784_db_user:54123_Dsa_123@clustertest.damc9wv.mongodb.net/fusionmain
 JWT_SECRET=fusionmain_secret_key
 ADMIN_SECRET=my_admin_secret_key2
+
+
+EMAIL_USER=kumarroushan2784@gmail.com
+EMAIL_PASS=lsnvksfpxdergvql
+ADMIN_EMAIL=kumarroushan2784@gmail.com
